Initial commit for public release of ReCFI

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+docker-test-results
+docker-build-debug
+docker-build-release
 #==============================================================================#
 # This file specifies intentionally untracked files that git should ignore.
 # See: http://www.kernel.org/pub/software/scm/git/docs/gitignore.html
